--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AskMeAI</string>
+    <string name="setting">Settings</string>
+    <string name="history">History</string>
+    <string name="home">Home</string>
 </resources>
